--- a/apilayer/pom.xml
+++ b/apilayer/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-api</artifactId>
+            <version>1.21.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <extensions>
