--- a/auth/auth_kube.yaml
+++ b/auth/auth_kube.yaml
@@ -21,10 +21,10 @@ spec:
             - containerPort: 2884
           resources:
             requests:
-              cpu: "100m"
+              cpu: "500"
               memory: "64Mi"
             limits:
-              cpu: "500m"
+              cpu: "800m"
               memory: "128Mi"
 
 # Auth Service
