Updated token dispenser

--- a/token_dispenser/Dockerfile
+++ b/token_dispenser/Dockerfile
@@ -1,8 +1,10 @@
-FROM python:3.7
+#FROM python:3.7
+FROM pypy:3.6
+RUN apt-get update -y && apt-get install -y git gcc g++
 ADD requirements.txt /requirements.txt
 RUN pip3 install -r requirements.txt
 
 # Add the other things
 WORKDIR token_dispenser
 ADD ./ .
-ENTRYPOINT ["python3", "__main__.py"]
+ENTRYPOINT ["pypy3", "__main__.py"]
