--- a/token_dispenser/requirements.txt
+++ b/token_dispenser/requirements.txt
@@ -2,4 +2,5 @@ redis
 grpcio-tools
 grpcio
 mypy-protobuf
-git+git://github.com/mattpaletta/pynotstdlib.git
+threadlru
+# git+git://github.com/mattpaletta/pynotstdlib.git
