--- a/auth/auth_kube.yaml
+++ b/auth/auth_kube.yaml
@@ -21,7 +21,7 @@ spec:
             - containerPort: 2884
           resources:
             requests:
-              cpu: "500"
+              cpu: "500m"
               memory: "64Mi"
             limits:
               cpu: "800m"
