Change Postgres configuration for Posts_db

--- a/posts/posts_kube.yaml
+++ b/posts/posts_kube.yaml
@@ -50,7 +50,7 @@ spec:
   ports:
     - port: 5432
   selector:
-    app: posts_db
+    app: postsdb
   type: ClusterIP
 
 # Posts Postgres Deployment
@@ -64,7 +64,7 @@ spec:
   template:
     metadata:
       labels:
-        app: posts_db
+        app: postsdb
     spec:
       containers:
         - name: postsdb
